--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://VipulRanjan29.github.io/React_smallProjects",
+  "homepage": "https://VipulRanjan29.github.io/React_small_projects",
   "name": "vite-project",
   "private": true,
   "version": "0.0.0",
